CF 5.10 | Feature: add admin flag, add admin moderation functionality to reviews (delete), restrict access to admins only for the delete function, make administrative buttons in views visible for admin only.

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -78,6 +78,9 @@ a:hover {
     &:hover {
       background-color: $shade-color; 
     }
+  }
+  a.previous_page {
+    border-left: none;
   } 
 }
 
