--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -8,16 +8,17 @@
   <div class="row prod-inner">
   
     <% @products.each do |product| %>
-      <%= render partial: "product", locals: {product: product} %>
+      <%= render partial: "shared/product", locals: {product: product} %>
     <% end %>
   
   </div>
 
 
-
-  <div class="btn-control-group">
-    <%= link_to new_product_path, class: 'btn btn-default' do %>
-      <i class="glyphicon glyphicon-plus"></i> New Product
-    <% end %>
-  </div>
+  <% if signed_in? && current_user.admin? %>
+    <div class="btn-control-group">
+      <%= link_to new_product_path, class: 'btn btn-default' do %>
+        <i class="glyphicon glyphicon-plus"></i> New Product
+      <% end %>
+    </div>
+  <% end %>
 </div>
