--- a/app/views/shared/_product.html.erb
+++ b/app/views/shared/_product.html.erb
@@ -10,20 +10,21 @@
     </header>
   <% end %>
   
+  <% if signed_in? && current_user.admin? %>
+    <div class="btn-group">  
+      <%= link_to product, class: 'btn btn-default btn-xs' do %>
+        <i class="glyphicon glyphicon-eye-open"></i>
+      <% end %>
 
-  <div class="btn-group">  
-    <%= link_to product, class: 'btn btn-default btn-xs' do %>
-      <i class="glyphicon glyphicon-eye-open"></i>
-    <% end %>
+      <%= link_to edit_product_path(product), class: 'btn btn-default btn-xs' do %>
+        <i class="glyphicon glyphicon-pencil"></i>
+      <% end %>
 
-    <%= link_to edit_product_path(product), class: 'btn btn-default btn-xs' do %>
-      <i class="glyphicon glyphicon-pencil"></i>
-    <% end %>
-
-    <%= link_to product, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-default btn-xs' do %>
-      <i class="glyphicon glyphicon-remove"></i>
-    <% end %>
-  </div>
+      <%= link_to product, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-default btn-xs' do %>
+        <i class="glyphicon glyphicon-remove"></i>
+      <% end %>
+    </div>
+  <% end %>
 
  
 </div>
