Beauty tweaks welcome email and 404 500 error pages

--- a/app/views/user_mailer/welcome.html.erb
+++ b/app/views/user_mailer/welcome.html.erb
@@ -22,12 +22,12 @@
               </tr>  
               <tr>  
                 <td align="center" style="font-size: 12px; font-family: Arial, sans-serif;  color: #003964; padding: 0px 0 15px 0;">
-                  &middot; WELCOME &middot;
+                  &middot; THANK YOUR FOR SIGNING UP WITH US &middot;
                 </td>
               </tr>
               <tr>  
                 <td align="center" style="font-size: 35px; font-weight: bold; font-family: Arial, sans-serif; color: #003964;">
-                  Thank you for signing up with <%= @appname %>
+                  Welcome to <%= @appname %>
                 </td>
               </tr>
 
@@ -42,12 +42,12 @@
 
               <tr>
                 <td align="center" style="font-size: 12px; font-family: Arial, sans-serif; color: #003964; padding: 0px 0 40px 0;">
-                  <i>Great to have you here. Yay, now all the fun can begin!</i>
+                  <i>Great to have you here. Welcome to the <%= @appname %> family. Don't forget to confirm you email adress so you can enjoy the maximum shopping experience with us right away. Yay, let the fun begin!</i>
                 </td>
               </tr>
 
               <tr>
-                <td style="font-size: 15px; font-family: Arial, sans-serif; line-height: 20px; color: #003964; padding: 0px 0 40px 0;">
+                <td align="center" style="font-size: 15px; font-family: Arial, sans-serif; line-height: 20px; color: #003964; padding: 0px 0 40px 0;">
                   <strong>Your <%= @appname %> Team!</strong>
                 </td>
               </tr>
