--- a/app/views/user_mailer/welcome.html.erb
+++ b/app/views/user_mailer/welcome.html.erb
@@ -42,7 +42,8 @@
 
               <tr>
                 <td align="center" style="font-size: 12px; font-family: Arial, sans-serif; color: #003964; padding: 0px 0 40px 0;">
-                  <i>Great to have you here. Welcome to the <%= @appname %> family. Don't forget to confirm you email adress so you can enjoy the maximum shopping experience with us right away. Yay, let the fun begin!</i>
+                  <i>Great to have you here. Welcome to the <%= @appname %> family. Don't forget to confirm you email adress so you can enjoy the maximum shopping experience with us right away. </i>
+                  <i>Yay, let the fun begin!</i>
                 </td>
               </tr>
 
@@ -68,7 +69,7 @@
                         <table border="0" cellpadding="0" cellspacing="0" width="100%">
                           <tr>
                             <td>
-                              <img src="https://moebi.herokuapp.com/assets/placeholder-54b2eb66cb4654950fe971b7e1a0c3aa14d9eece995497c727e9933c0367475b.jpg" alt="stool" width="100%" height="240" style="display: block;" />
+                              <%= image_tag("articles/article1.jpg", height: '240', width: '100%', alt: "Stool", style: "display: block;") %>
                             </td>
                           </tr>
                           <tr>
@@ -87,7 +88,7 @@
                         <table border="0" cellpadding="0" cellspacing="0" width="100%">
                           <tr>
                             <td>
-                              <img src="https://moebi.herokuapp.com/assets/placeholder-54b2eb66cb4654950fe971b7e1a0c3aa14d9eece995497c727e9933c0367475b.jpg" alt="stool" width="100%" height="240" style="display: block;" />
+                              <%= image_tag("articles/article1.jpg", height: '240', width: '100%', alt: "Stool", style: "display: block;") %>
                             </td>
                           </tr>
                           <tr>
@@ -118,7 +119,7 @@
                 <td width="75%" style="font-size: 12px; font-family: Arial, sans-serif; color: #000000;">
                   Do not reply to this message. <br/>
                   It will be send directly into a black hole in space.
-                  Go to <a href="https://moebi.herokuapp.com" style="color: #000000;"><b><font color="#000000">Möbi</font></b></a>
+                  Go to <b><font color="#000000"><%= link_to 'Möbi', root_url %></font></b>
                 </td>
 
                 <td align="right">
