Fix ighting, living, dining view on dependency with empty array

--- a/app/views/static_pages/dining.html.erb
+++ b/app/views/static_pages/dining.html.erb
@@ -7,9 +7,10 @@
 
   <div class="row">
 
-  
-    <% @dining_products.each do |product| %>
-      <%= render partial: "shared/product", locals: {product: product} %>
+    <% if @dining_products.present? %>
+	    <% @dining_products_paginated.each do |product| %>
+	      <%= render partial: "shared/product", locals: {product: product} %>
+	    <% end %>
     <% end %>
   
   </div>
