CF 6.4 | Add stripe card payment

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -39,6 +39,11 @@
       </p> 
       <% end %>
 
+      
+      <%= form_with(url: '/payments/create') do |form| %>
+        <%= render partial: "shared/stripe_checkout_button" %>
+      <% end %> 
+    
 
 
       <div class="row">
