--- a/app/views/shared/_stripe_checkout_button.html.erb
+++ b/app/views/shared/_stripe_checkout_button.html.erb
@@ -2,8 +2,8 @@
   src="https://checkout.stripe.com/checkout.js" class="stripe-button"
   data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
   data-amount="<%= @product.price * 100 %>"
-  data-name="moebi.herokuapp"
-  data-description="<%= @product.name %>"
+  data-name="<%= @product.name %>"
+  data-description="<%= @product.teaser %>"
   data-image="https://stripe.com/img/documentation/checkout/marketplace.png"
   data-locale="auto"
   data-zip-code="true"
