CF 6.6 | add Payments Controller, add payments create action, add mailer after succesful payment

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -392,3 +392,11 @@ h3.form-heading  {
 }
 
 
+//Payments/purchase
+.more_shopping {
+  margin: 20px auto;
+}
+
+.latest_products .row {
+  margin: auto;
+}
