--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -391,6 +391,15 @@ h3.form-heading  {
 
 }
 
+//Stripe
+#stripeButton {
+  color: $shade-color;
+  background-color: $primary-color;
+}
+#stripeButton:hover {
+  color: $primary-color;
+  background-color: $highlight-color;
+}
 
 //Payments/purchase
 .more_shopping {
