--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -40,9 +40,20 @@
       <% end %>
 
       
-      <%= form_with(url: '/payments/create') do |form| %>
-        <%= render partial: "shared/stripe_custom_checkout_button" %>
+      <% if current_user.present? %>
+
+      <%= form_with(url: '/payments/create', id: 'chargeForm') do |form| %>
+        <script src="https://checkout.stripe.com/checkout.js"></script>
+        <button id="stripeButton" class="btn btn-default">Buy Now</button>
+        <%= hidden_field_tag 'stripeToken' %>
+        <%= hidden_field_tag 'stripeEmail' %>
         <%= hidden_field_tag(:product_id, @product.id) %>
+        <%= render partial: "shared/custom_stripe_checkout_button" %>  
+      <% end %> 
+
+      <% else %>
+
+
       <% end %> 
     
 
