--- a/app/views/shared/_custom_stripe_checkout_button.html.erb
+++ b/app/views/shared/_custom_stripe_checkout_button.html.erb
@@ -1,30 +1,23 @@
-<script src="https://checkout.stripe.com/checkout.js"></script>
-
-<button id="stripeButton" class="btn btn-default">
-  <span class="glyphicon glyphicon-shopping-cart"></span>
-  Buy now
-</button>
-
 <script>
 var handler = StripeCheckout.configure({
   key: '<%= Rails.configuration.stripe[:publishable_key] %>',
   image: 'https://stripe.com/img/documentation/checkout/marketplace.png',
   locale: 'auto',
-  token: function(token) {
-    // You can access the token ID with `token.id`.
-    // Get the token ID to your server-side code for use.
-    return token.id;
-  }
-});
+  token: function(token, args) { 
+        document.getElementById("stripeToken").value = token.id;
+        document.getElementById("stripeEmail").value = token.email;
+        document.getElementById("chargeForm").submit();
+      }
+ });
 
 document.getElementById('stripeButton').addEventListener('click', function(e) {
   // Open Checkout with further options:
   handler.open({
     name: 'möbi',
     description: '<%= @product.name %>',
+    zipCode: true,
     currency: 'eur',
-    amount: <%= @product.price*100 %>,
-    zipCode: true
+    amount: <%= @product.price*100 %>
   });
   e.preventDefault();
 });
