CF 6.6. extra | Add custom styling to buy now button

--- a/app/views/shared/_custom_stripe_checkout_button.html.erb
+++ b/app/views/shared/_custom_stripe_checkout_button.html.erb
@@ -4,7 +4,10 @@
   <%= hidden_field_tag 'stripeToken' %>
   <%= hidden_field_tag 'stripeEmail' %>
 
-<button id="customButton">Purchase</button>
+<button id="customButton" class="btn btn-default purchase-btn">
+ <i class="glyphicon glyphicon-shopping-cart"></i>
+  Buy now
+</button>
 
 <script>
 var handler = StripeCheckout.configure({
