--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -401,6 +401,12 @@ h3.form-heading  {
   margin: auto;
 }
 
-.stripe-button-el {
-  
+.purchase-btn {
+  color: $shade-color;
+  background-color: $primary-color;
+}
+
+.purchase-btn:hover {
+  color: $primary-color;
+  background-color: $highlight-color;
 }
