--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -46,11 +46,9 @@
           <%= render partial: "shared/custom_stripe_checkout_button" %>  
         <% end %> 
       <% else %>
-        <%= link_to new_user_registration_path, class: 'btn btn-default purchase-btn' do %>
-        <i class="glyphicon glyphicon-shopping-cart"></i> Buy now
-      <% end %>
-        
-
+        <%= link_to new_user_registration_path, id:'registrate_before', class: 'btn btn-default purchase-btn' do %>
+          <i class="glyphicon glyphicon-shopping-cart"></i> Buy now
+        <% end %>
       <% end %>
 
 
