--- a/app/views/shared/_custom_stripe_checkout_button.html.erb
+++ b/app/views/shared/_custom_stripe_checkout_button.html.erb
@@ -22,13 +22,14 @@ var handler = StripeCheckout.configure({
 });
 
 document.getElementById('customButton').addEventListener('click', function(e) {
+  var productAmount = <%= @amount %>
   // Open Checkout with further options:
   handler.open({
     name: 'möbi',
     description: '<%= @product.name %>',
     zipCode: true,
     currency: 'eur',
-    amount: <%= @amount %>
+    amount: productAmount
   });
   e.preventDefault();
 });
