Add registrate or login before purchase modal

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -401,12 +401,12 @@ h3.form-heading  {
   margin: auto;
 }
 
-.purchase-btn {
+.primary-btn {
   color: $shade-color;
   background-color: $primary-color;
 }
 
-.purchase-btn:hover {
+.primary-btn:hover {
   color: $primary-color;
   background-color: $highlight-color;
 }
