--- a/app/views/shared/_custom_stripe_checkout_button.html.erb
+++ b/app/views/shared/_custom_stripe_checkout_button.html.erb
@@ -4,7 +4,7 @@
   <%= hidden_field_tag 'stripeEmail' %>
 <% end %>
 
-<button id="customButton" class="btn btn-default purchase-btn">
+<button id="customButton" class="btn btn-default primary-btn">
  <i class="glyphicon glyphicon-shopping-cart"></i>
   Buy now
 </button>
