CF 6.9. | Add Elevate Zoom to Product show view

--- a/app/assets/javascripts/main.js.erb
+++ b/app/assets/javascripts/main.js.erb
@@ -20,6 +20,12 @@ $(document).on('turbolinks:load', function() {
     }
   });
 
+  $(".img_zoom").elevateZoom({
+    zoomType  : "lens",
+    lensShape : "round",
+    lensSize  : 200
+  });
+
 });
 
 
