--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -362,10 +362,6 @@ h3.form-heading  {
 }
 
 
-
-
-
-
 .form-authentication .btn-default:hover {
   color: $primary-color;
   background-color: $shade-color;
@@ -421,3 +417,5 @@ h3.form-heading  {
   background-image: none;
   background-color: $highlight-color;
 }
+
+//Show Product
