--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,8 +1,11 @@
 <div class="container">
 
   <div class="row">
+
     <div class="col-sm-6">
-        <%= image_tag @product.product_image.url if @product.product_image? %>
+      <% if @product.product_image.present? %>
+        <%= image_tag @product.product_image.url, class: "img_zoom img-responsive", data_zoom_image: "@product.product_image.url" %>
+      <% end %>
     </div>
     <div class="col-sm-6">
       <h2><%= @product.name %></h2>
