--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -65,8 +65,8 @@
 
         <!-- search form -->
         <div class="row">
-          <div class="col-sm-6 text-center">
-            <h3>Find your <span class="glyphicon glyphicon-heart"></span> product!</h3>
+          <div class="col-sm-6 text-center hidden-xs">
+            <h3 class="searchform-header">Find your <span class="glyphicon glyphicon-heart"></span> product!</h3>
           </div><!-- /.col-sm-6 -->
       
           <div class="col-sm-6">           
@@ -83,7 +83,7 @@
         <hr>
         <section class="footer-accordion">
           <!-- accordion -->
-          <a class="footer-nav-btn" role="button" data-toggle="collapse" href="#footernav" aria-expanded="false" aria-controls="footernav">
+          <a class="footer-nav-link" role="button" data-toggle="collapse" href="#footernav" aria-expanded="false" aria-controls="footernav">
             <h4>About us &amp; our Services <span class="caret"></span></h4>
           </a>
           <div class="collapse text text-center" id="footernav">
@@ -113,10 +113,13 @@
                 <p>10% off your first purchase</p>
               </div>
             </div>
+            <div class="row">
+              <div class="col-sm-12 footer-baseline">
+                <p class="text-muted copyright-text">&copy; 2017 möbi</p>
+              </div>
+            </div>
+
           </div><!-- /.footernav -->
-        </section>
-        <section class="footer-baseline">  
-          <p class="text-muted copyright-text">&copy; 2017 möbi</p>
         </section>
       </div>
     </footer>
