Change mobile layout footer: make footer header invisible on mobile views

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -83,7 +83,7 @@
         <hr>
         <section class="footer-accordion">
           <!-- accordion -->
-          <a class="footer-nav-link" role="button" data-toggle="collapse" href="#footernav" aria-expanded="false" aria-controls="footernav">
+          <a class="footer-nav-link text-center" role="button" data-toggle="collapse" href="#footernav" aria-expanded="false" aria-controls="footernav">
             <h4>About us &amp; our Services <span class="caret"></span></h4>
           </a>
           <div class="collapse text text-center" id="footernav">
