--- a/app/assets/javascripts/main.js.erb
+++ b/app/assets/javascripts/main.js.erb
@@ -1,8 +1,4 @@
-
-$(document).on('turbolinks:load', function() {
-
-  $(".alert").delay(2000).fadeOut(800);
-
+var refreshRating = function() {
   $(".rating").raty({
     starHalf:  '<%= asset_path 'star-half.png' %>',
     starOff:   '<%= asset_path 'star-off.png' %>',
@@ -19,6 +15,13 @@ $(document).on('turbolinks:load', function() {
       return $(this).attr('data-score');
     }
   });
+};
+
+$(document).on('turbolinks:load', function() {
+
+  $(".alert").delay(2000).fadeOut(800);
+
+  refreshRating();
 
   $(".img_zoom").elevateZoom({
     zoomType  : "lens",
