--- a/app/views/products/_comments.html.erb
+++ b/app/views/products/_comments.html.erb
@@ -1,32 +1,9 @@
-<div class="product-reviews">
-  <div class="row">
-  <hr>
+<hr>
+<div class="product-reviews row">
     <% @comments.each do |comment| %>
-        
-          <div class="col-sm-4">
-              
-              <p>
-                <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
-                <%= comment.user.first_name %> <small><em><%= "#{time_ago_in_words(comment.created_at)} ago" %></em></small>
-              </p>
-              <p><%= "Rating: #{comment.rating}/5" %></p>
-              <div class="rated" data-score="<%= comment.rating %>"></div>
-              <p><%= comment.body %></p>
-
-                <% if signed_in? && current_user.admin? %>
-                
-                    <%= link_to(product_comment_path(comment.product, comment), method: :delete, data: {confirm: 'Are you sure?'}, class: 'btn btn-default btn-sm') do %>
-                       <span class="glyphicon glyphicon-remove"></span> Destroy Review
-                    <% end%>
-           
-                
-                <% end%>
-              <hr>
-
-          </div>     
+          <%= render comment %>
     <% end %>
-    </div>
-    <div class="text-center">
-      <%= will_paginate @comments, previous_label: "Previous", next_label: "Next", inner_window: 1, outter_window: 0 %>
-    </div>
+</div>
+<div class="text-center">
+  <%= will_paginate @comments, previous_label: "Previous", next_label: "Next", inner_window: 1, outter_window: 0 %>
 </div>
