--- a/app/assets/javascripts/main.js.erb
+++ b/app/assets/javascripts/main.js.erb
@@ -17,7 +17,7 @@ var refreshRating = function() {
   });
 };
 
-$(document).on('turbolinks:load ajaxSuccess', function() {
+$(document).on('turbolinks:load', function() {
 
   $(".alert").delay(2000).fadeOut(800);
 
