--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -7,10 +7,10 @@ $("#new_comment").fadeOut(400, function() {
   $(this).html(reviewSent).fadeIn(400);
 });
 
-
-
 $("#average-rating").attr('data-score', "<%= @product.average_rating %>");
 
 $(".product-reviews").prepend("<%= j render @comment %>");
 
-refreshRating();
+$(function() {
+  refreshRating();
+});
