--- a/app/assets/javascripts/main.js.erb
+++ b/app/assets/javascripts/main.js.erb
@@ -1,15 +1,14 @@
 var refreshRating = function() {
-  $(".rating").raty({
-    starHalf:  '<%= asset_path 'star-half.png' %>',
-    starOff:   '<%= asset_path 'star-off.png' %>',
-    starOn:    '<%= asset_path 'star-on.png' %>',
+  $('.rating').raty({
+    starHalf: '<%= asset_path 'star-half.png' %>',
+    starOff: '<%= asset_path 'star-off.png' %>',
+    starOn: '<%= asset_path 'star-on.png' %>',
     scoreName: 'comment[rating]'
   });
-
-  $('.rated').raty({
+    $('.rated').raty({
     starHalf: '<%= asset_path 'star-half.png' %>',
-    starOff:  '<%= asset_path 'star-off.png' %>',
-    starOn:   '<%= asset_path 'star-on.png' %>',
+    starOff: '<%= asset_path 'star-off.png' %>',
+    starOn: '<%= asset_path 'star-on.png' %>',
     readOnly: true,
     score: function() {
       return $(this).attr('data-score');
