--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -11,5 +11,22 @@ $("#average-rating").attr('data-score', "<%= @product.average_rating %>");
 
 $(".product-reviews").prepend("<%= j render @comment %>");
 
+var refreshRating = function() {
+  $('.rating').raty({
+    starHalf: '<%= asset_path 'star-half.png' %>',
+    starOff: '<%= asset_path 'star-off.png' %>',
+    starOn: '<%= asset_path 'star-on.png' %>',
+    scoreName: 'comment[rating]'
+  });
+    $('.rated').raty({
+    starHalf: '<%= asset_path 'star-half.png' %>',
+    starOff: '<%= asset_path 'star-off.png' %>',
+    starOn: '<%= asset_path 'star-on.png' %>',
+    readOnly: true,
+    score: function() {
+      return $(this).attr('data-score');
+    }
+  });
+};
 
 refreshRating();
