--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -6,9 +6,10 @@
 
 
   <div class="row prod-inner">
-  
+    <% cache(cache_key_for_products) do %>
     <% @products.each do |product| %>
       <%= render partial: "shared/product", locals: {product: product} %>
+    <% end %>
     <% end %>
   
   </div>
