--- a/app/views/shared/_product.html.erb
+++ b/app/views/shared/_product.html.erb
@@ -1,3 +1,4 @@
+<% cache product do %>
 <div class= "col-sm-3 prod prod-gallery">
 
   <%= link_to product_path(product) do %> 
@@ -28,3 +29,4 @@
 
  
 </div>
+<% end %>
