CF 6.11 | Add Memcachier gem, add dalli gem, add fragment caching to articles index and product index views

--- a/app/views/static_pages/landing_page.html.erb
+++ b/app/views/static_pages/landing_page.html.erb
@@ -1,3 +1,4 @@
+<% cache do %>
 <section class="season-prod">
   <div class="container">
     <div class="row prod-inner">
@@ -36,7 +37,7 @@
     <hr>
   </div><!-- /.container-fluid -->
 </section>
-
+<% end %>
 
 <% if @product_slide_groups.present? %>
   <section>
