--- a/app/views/static_pages/_featured_product.html.erb
+++ b/app/views/static_pages/_featured_product.html.erb
@@ -1,3 +1,4 @@
+<% cache featured_product do %>
 <%= link_to product_path(featured_product.id) do %>
   <header> 
     <h5>
@@ -9,4 +10,5 @@
   <% if featured_product.product_image.present? %>  
     <%= image_tag(featured_product.product_image.url) %> 
   <% end %> 
+<% end %> 
 <% end %> 
