--- a/app/views/static_pages/landing_page.html.erb
+++ b/app/views/static_pages/landing_page.html.erb
@@ -7,7 +7,7 @@
         <%= render partial: "featured_article", locals: {featured_article: @featured_article} if @featured_article %>
       </div><!-- /.leftcol level 1-->
 
-      <% cache @featured_product do %> 
+      <% cache(cache_key_for_featured_products) do %> 
       <div class="col-sm-2">
         <div class="row">
           <div class="col-xs-12 prod">
@@ -36,7 +36,7 @@
         </div>
       </div><!-- /.rightcol-level 1 -->
       <% end %>
-      
+
     </div><!-- /.row -->
     <hr>
   </div><!-- /.container-fluid -->
@@ -56,8 +56,10 @@
 
         <!-- Wrapper for slides -->
         <div class="carousel-inner row" role="listbox">
+          <% cache(cache_key_for_product_slide_groups) do %>
           <% @product_slide_groups.each do |group| %>
             <%= render partial: "product_slider", locals: {group: group} %>
+          <% end %>
           <% end %>
         </div>
 
