Remove redis for cache testing

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,7 +1,10 @@
+
+
 <div class="container">
 
   <div class="row">
     
+    <% cache @product do %> 
 
     <div class="col-sm-6">
       <% if @product.product_image.present? %>
@@ -41,6 +44,8 @@
         <strong>Categorie:</strong> 
         <%= @product.categorie.name %> 
       </p> 
+      <% end %>
+      
       <% end %>
       
 
