--- a/app/views/shared/_product.html.erb
+++ b/app/views/shared/_product.html.erb
@@ -1,14 +1,15 @@
 
 <div class= "col-sm-3 prod prod-gallery">
-
-  <%= link_to product_path(product) do %> 
-    <% if product.product_image? %>
-      <%= image_tag (product.product_image.url) %>
-    <% end %>  
-    
-    <header>
-      <h5><%= product.name %></h5>
-    </header>
+  <% cache product do %>
+    <%= link_to product_path(product) do %> 
+      <% if product.product_image? %>
+        <%= image_tag (product.product_image.url) %>
+      <% end %>  
+      
+      <header>
+        <h5><%= product.name %></h5>
+      </header>
+    <% end %>
   <% end %>
   
   <% if signed_in? && current_user.admin? %>
