--- a/app/views/products/_new_comment.html.erb
+++ b/app/views/products/_new_comment.html.erb
@@ -10,7 +10,7 @@
         <%= form_for([@product, @product.comments.build], remote:true) do |f| %>
           <div class="form-group col-sm-6">
             <%= f.label :body, "Your Comment:", class: "control-label" %>
-            <%= f.text_area :body, class: "form-control", rows:"3"  %>
+            <%= f.text_area :body, class: "form-control col-sm-12", rows:"3"  %>
           </div>
           <div class="form-group col-sm-6">
             <%= f.label :rating, "Your Rating:", class: "control-label" %>
