--- a/app/views/static_pages/_form.html.erb
+++ b/app/views/static_pages/_form.html.erb
@@ -17,5 +17,5 @@
       </div>        
     </div>
   </div>
-  <%= form.submit "Send" %>   
+  <%= form.submit "Send", class: "btn btn-default btn-control-group-left"%>   
 <% end %>
