--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -3,7 +3,7 @@
 
   <%= render 'form' %>
 
-  <h2>Adress</h2>
+  <h5><strong>Adress</strong></h5>
   <p>Happy Lane 0815</p>
   <p>90210 Beverly Hills</p>
   <p>USA</p>
