--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -22,6 +22,7 @@ img {
   height: auto;
 }
 
+
 .btn-control-group {
 	float: right;
 	margin: 20px 0;
@@ -33,7 +34,10 @@ img {
     color: $shade-color;
 }
 
-
+.btn-control-group a,
+.btn-group a {
+    color: $shade-color;
+}
 //Form
 
 .form-image {
@@ -70,3 +74,9 @@ img {
 	margin-bottom: 15px;
 }
 
+
+//show
+.views {
+    margin-top: 10px;
+    background-color: $shade-color;
+}
