--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -107,10 +107,11 @@
   
   <div class="row">
     <%= render 'new_comment' %>
-
-    <a role="button" data-toggle="collapse" href="#collapseComments" aria-expanded="false" aria-controls="collapseExample">
-    Show more comments
-    </a>
+    <div class="col-sm-12">
+      <a role="button" data-toggle="collapse" href="#collapseComments" aria-expanded="false" aria-controls="collapseExample">
+        Show more comments
+      </a>
+    </div>
 
     <div class="collapse" id="collapseComments">
       <%= render 'comments' %>
