Add more styling to product show page

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -113,7 +113,7 @@
       </a>
     </div>
 
-    <div class="collapse" id="collapseComments">
+    <div class="collapse col-sm-12" id="collapseComments">
       <%= render 'comments' %>
     </div>
   </div>
