Styling footer accordion

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -90,12 +90,13 @@
 
         <div class="footer-accordion">
           <!-- accordion -->
-          <div class="col-sm-12">
+       
             <a class="footer-nav-link text-center" role="button" data-toggle="collapse" href="#footernav" aria-expanded="false" aria-controls="footernav">
               <h4>About us &amp; our Services <span class="caret"></span></h4>
             </a>
-          </div>
+   
           <div class="collapse text text-center" id="footernav">
+
             <div class="row">
               <div class="col-sm-3">
                 <h5>About</h5>
@@ -122,6 +123,7 @@
                 <p>10% off your first purchase</p>
               </div>
             </div>
+
             <div class="row">
               <div class="col-sm-12 footer-baseline">
                 <p class="text-muted copyright-text">&copy; 2017 möbi</p>
@@ -129,8 +131,9 @@
             </div>
 
           </div><!-- /.footernav -->
-        </div>
-      </div>
+        </div><!-- /.footer accordion-->
+
+      </div><!-- /.container -->
     </footer>
 
   </body>
