Optimize image recourses product index medium thumb image

--- a/app/views/shared/_product.html.erb
+++ b/app/views/shared/_product.html.erb
@@ -3,7 +3,7 @@
 
     <%= link_to product_path(product) do %> 
       <% if product.product_image? %>
-        <%= image_tag (product.product_image.url) %>
+        <%= image_tag (product.product_image.url(:medium)) %>
       <% end %>  
       
       <header>
