--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -111,7 +111,7 @@
       <%= render 'new_comment' %>
     </div>
     <div class="col-sm-12">
-      <a role="button" data-toggle="collapse" href="#collapseComments" aria-expanded="false" aria-controls="collapseExample">
+      <a class="show-more-link" role="button" data-toggle="collapse" href="#collapseComments" aria-expanded="false" aria-controls="collapseExample">
         Show more reviews
       </a>
     </div> 
